# hotpath-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  context7.json  justfile  run_loadtest.sh
.github/workflows/: ci.yml  hotpath-comment-linux.yml  hotpath-comment-macos.yml  hotpath-comment.yml  hotpath-profile-linux.yml  hotpath-profile-macos.yml  hotpath-profile.yml
crates/hotpath/: Cargo.toml
crates/hotpath-macros/: Cargo.toml
crates/hotpath-macros/src/: lib.rs  lib_on.rs
crates/hotpath/src/: http_server.rs  lib.rs  lib_off.rs  lib_on.rs  mcp_server.rs  output.rs  output_on.rs
crates/hotpath/src/lib_on/: channels.rs  functions.rs  futures.rs  streams.rs  threads.rs
crates/hotpath/src/lib_on/alloc/: guard.rs  report.rs  state.rs
crates/hotpath/src/lib_on/alloc_bytes_total/: state.rs
crates/hotpath/src/lib_on/alloc_count_total/: state.rs
crates/hotpath/src/lib_on/channels/: guard.rs  wrapper.rs
crates/hotpath/src/mcp_server/: output.rs
crates/hotpath/tests/: channels_crossbeam.rs  channels_ftc.rs  channels_std.rs  channels_tokio.rs  functions.rs  futures.rs  streams.rs  threads.rs
crates/test-channels-crossbeam/examples/: basic_crossbeam.rs
crates/test-channels-ftc/: Cargo.toml
crates/test-channels-futures/examples/: basic_futures.rs
crates/test-channels-std/examples/: basic_std.rs
crates/test-channels-tokio/examples/: basic_tokio.rs
crates/test-futures/examples/: basic_futures.rs  iter_futures.rs
crates/test-streams/examples/: basic_streams.rs
crates/test-tokio-async/examples/: basic.rs  json_file_reporter.rs  long_running.rs
(+13 files in other folders)
