[package]
name = "hotpath-macros"
version = "0.8.0"
edition = "2021"
repository = "https://github.com/pawurb/hotpath"
description = "Rust performance debug toolkit. Live profiling for allocations, timings, threads, and channel/stream data flows - proc macros crate"
readme = "../../README.md"
license = "MIT"
categories = ["development-tools"]

[features]
default = []
hotpath = ["dep:proc-macro2", "dep:quote", "dep:syn"]
hotpath-off = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
syn = { workspace = true, optional = true }
